Fixd the copy button alignment

--- a/website/main-pages/ballerina.io-website-theme/css/ballerina-io-bbe.css
+++ b/website/main-pages/ballerina.io-website-theme/css/ballerina-io-bbe.css
@@ -196,7 +196,7 @@ table.cBottomBorder-table .cCodeTD {
     display: inline-block;
     margin-top: 10px;
     margin-bottom: 10px;
-    padding-left: 5px;
+    padding-left: 0px;
     float: left;
 }
 
@@ -289,7 +289,7 @@ a.next {
 }
 
 .cLeftTD {
-    width: 60%;
+    width: 62%;
     vertical-align: top;
 }
 
@@ -298,7 +298,7 @@ a.next {
 }
 
 .cRightTD {
-    padding-left: 60px;
+    padding-left: 27px;
     padding-top: 75px;
     vertical-align: top;
 }
