--- a/website/main-pages/ballerina.io-website-theme/css/ballerina-io.css
+++ b/website/main-pages/ballerina.io-website-theme/css/ballerina-io.css
@@ -916,7 +916,7 @@ pre code {
 
 .cPhilosophy .cBBE-links {
     position: absolute;
-    right: 35px;
+    right: 17px;
     top: -40px;
 }
 
